--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -11,3 +11,5 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale; }
+
+/*# sourceMappingURL=maps/iconfont.css.map */
