--- a/css/topbar.css
+++ b/css/topbar.css
@@ -511,98 +511,6 @@
   position: relative;
   top: 2px; }
 
-/*header04 start*/
-.header04 {
-  padding: 12px 0 12px 15px; }
-
-.header04 .itemChoose {
-  color: #000;
-  position: relative; }
-
-.header04 .itemChoose:before {
-  position: absolute;
-  left: -15px;
-  content: " ";
-  border-left: 3px solid #df0000;
-  /* width: 5px; */
-  width: 1px;
-  height: 85%;
-  top: 2px; }
-
-/*header04 end*/
-/*header03 start*/
-.header03 {
-  padding: 4px 18px;
-  display: block;
-  height: 26px;
-  line-height: 26px;
-  background-color: #f6f6f6;
-  text-align: left; }
-
-.header03 .h-title01float-l {
-  font-size: 15px; }
-
-.header03 .more {
-  color: #333;
-  padding-left: 20px;
-  background: url(../img/iconHome.png) no-repeat 0 50%; }
-
-/*header03 end*/
-/*header02 start*/
-.header02 {
-  padding: 25px 0 20px 0;
-  display: block;
-  height: 26px;
-  line-height: 26px; }
-
-.header02 .h-title01 {
-  float: left;
-  font-size: 16px;
-  font-weight: 600; }
-
-.header02 .h-title02 {
-  position: relative;
-  top: 2px;
-  float: left;
-  margin-left: 8px; }
-
-.header02 .h-title02.upCase {
-  text-transform: uppercase; }
-
-.header02 .h-line {
-  border-bottom: 1px solid #ddd;
-  height: 21px;
-  margin-left: 147px; }
-
-.header02 .h-line .more {
-  line-height: 18px; }
-
-.header02 .h-line .h-line02 {
-  border-bottom: 3px solid #6eb92b;
-  height: 21px;
-  width: 30px;
-  box-sizing: border-box; }
-
-.header02 .more {
-  color: #888; }
-
-/*header02 end*/
-/*header01 start*/
-.header01 {
-  padding: 25px 0 20px 0;
-  display: block;
-  height: 26px;
-  line-height: 26px; }
-
-.header01 .h-title01 {
-  float: left;
-  font-size: 16px;
-  font-weight: 600; }
-
-.header01 .more {
-  color: #888; }
-
-/*header01 end*/
 /* footer02 start */
 .footer02 {
   box-sizing: content-box;
@@ -730,3 +638,5 @@
   color: #c3c3c3; }
 
 /*a-title-header01 start*/
+
+/*# sourceMappingURL=maps/topbar.css.map */
