--- a/sass/mySassWare/base.scss
+++ b/sass/mySassWare/base.scss
@@ -18,6 +18,7 @@ ul{list-style: none;}
 button{border:none;}
 button:focus{outline: none;}
 .button,.link{cursor: pointer;}
+img{margin:auto};
 /* img{max-height:100%;max-width:100%;max-width:none\9;max-height:none\9;margin:auto;} */
 input{border:none;&:focus{outline:none;}}
 input[type="checkbox"]{outline:none;}
