--- a/sass/mySassWare/variable.scss
+++ b/sass/mySassWare/variable.scss
@@ -6,7 +6,7 @@ $smallSize : 12px;
 $baseSize : 14px;
 $mediumSize:$smallSize*1.3;
 $bigSize:$mediumSize*1.2;
-
+$titleSize:$bigSize*1.2;
 %smallSize{font-size:$smallSize}
 %baseSize{font-size:$baseSize;}
 %mediumSize{
@@ -15,6 +15,7 @@ $bigSize:$mediumSize*1.2;
 %bigSize{
   font-size: $bigSize;
 }
+
 %font-weight{font-weight:700;}
 %capitalize{text-transform:capitalize;}
 %uppercase{text-transform:uppercase;}
@@ -43,6 +44,7 @@ $white:#fff;
 $mainColor:#006acf;
 $mainBgColor:#f3f9fe;
 $contentBgColor:#f3f3f3;
+$little-gray:#f0f0f0;
 $super-gray:#f7f7f8;
 $light-gray:#f8f8f8;
 $light-gray2:#f5f5f1;
