--- a/sass/web/special.scss
+++ b/sass/web/special.scss
@@ -1,10 +1,15 @@
-@import "variable.scss";
+@import "../mySassWare/variable";
+@import "../mySassWare/mixin";
+@charset "utf-8";
+
+
+
 @function sign(){
 	$s : '-'!default;
 	@if random()<0.5{$s : '';}@else{$s : '-';}
 	@return #{$s};
 }
-  
+
 @-webkit-keyframes shake{
 	 $i : 2;
 	 $sign : '-';
@@ -39,7 +44,97 @@
 	 0%, 100% {
              -webkit-transform: translate(0, 0) rotate(0);
                      transform: translate(0, 0) rotate(0); } 
-} 
+}
 
+
+/*fixedBg 页面固定大背景 start*/
+.fixedBg {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-image: url(../img/background02.jpg);
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	overflow: hidden;
+	z-index: -1;
+}
+/*frosted-glass 毛玻璃 start*/
+.frosted-glass01 {
+	width: 80%;
+	position: absolute;
+	height: 50%;
+	margin: auto;
+	background: inherit;/*父元素有背景的情况下*/
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-ms-filter: blur(5px);
+	-o-filter: blur(5px);
+	filter: blur(5px);
+	/*filter: progid: DXImageTransform.Microsoft.Blur(PixelRadius=4, MakeShadow=false);*/
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	box-shadow: 1rem 1rem 3rem black;
+	/* box-shadow: 0 0 1rem black;*/
+}
+.frosted-glass02 {
+	width: 100%;
+	position: absolute;
+	height: 100%;
+	margin: auto;
+	background-image: url(../img/background.jpg);
+	background-position: 50% 50%;
+	background-attachment: fixed;  /*背景固定的时候，位置不是居中的*/
+	background-repeat: no-repeat;
+
+	overflow: hidden;
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-ms-filter: blur(5px);
+	-o-filter: blur(5px);
+	filter: blur(5px);
+	/*filter: progid: DXImageTransform.Microsoft.Blur(PixelRadius=4, MakeShadow=false);*/
+
+}
+/*frosted-glass 毛玻璃 end*/
+
+/*shadow01 start*/
+.shadow01:before {
+	z-index: -2;
+	position: absolute;
+	background: transparent;
+	width: 50%;
+	height: 50%;
+	content: '';
+	left: 20px;
+	bottom: 8px;
+	-webkit-transform: skew(-12deg) rotate(-4deg);
+	-moz-transform: skew(-12deg) rotate(-4deg);
+	-o-transform: skew(-12deg) rotate(-4deg);
+	-ms-transform: skew(-12deg) rotate(-4deg);
+	-o-box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+}
+.shadow01:after {
+	z-index: -1;
+	position: absolute;
+	background: transparent;
+	width: 50%;
+	height: 50%;
+	content: '';
+	right: 20px;
+	bottom: 8px;
+	-webkit-transform: skew(12deg) rotate(4deg);
+	-moz-transform: skew(12deg) rotate(4deg);
+	-o-transform: skew(12deg) rotate(4deg);
+	-ms-transform: skew(12deg) rotate(4deg);
+	-o-box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+}
+/*shadow01 end*/
 
  
