--- a/sass/web/frame.scss
+++ b/sass/web/frame.scss
@@ -59,13 +59,13 @@
     padding-left: 15px;    
 }
 .line{
-    margin:0 -15px;
+
 }
 .column{float:left;}
 
 .width66{width:66%;}
 .block{
-    padding-left:15px;padding-right: 15px;float: left;position: relative;
+    float: left;position: relative;
     min-height: 1px;
 }
 .block-1{width:100%;}
